# lamp

./: .gitignore  AUTHORS  COPYING  ChangeLog  LampCore.cpp  LampCore.h  Makefile  Makefile.am  Makefile.in  NEWS  README  ReadFile.cpp  ReadFile.h  Transaction.cpp  Transaction.h  aclocal.m4  changelog.html  check_files.py  config.h.in  configure  configure.ac  convert_id.py  data_preparation.html  eliminate_comb.cpp  eliminate_comb.py  example.html  exp2ratio.py  fastwy.py  flower.cpp  flower.py  frequentPatterns.py  functions4fisher.py  functions4u_test.py  functionsSuper.py  gsea4csv.py  hat.py  index.html  lamp.cpp  lamp.py  merge_exp_csv.py  (+8 more)
.deps/: eliminate_comb.Po  flower-LampCore.Po  flower-ReadFile.Po  flower-Transaction.Po  flower-flower.Po  lamp-LampCore.Po  lamp-ReadFile.Po  lamp-Transaction.Po  lamp-lamp.Po
assets/themes/twitter/bootstrap/css/: bootstrap.min.css
assets/themes/twitter/css/: style.css
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
flower/: flower_readfile.py  flower_svg.py
flowers/: Flower_readfile.cpp  Flower_readfile.h  Flower_svg.cpp  Flower_svg.h  Makefile.am  Makefile.in
frepattern/: LCM.cpp  LCM.h  Makefile.am  Makefile.in  Node.cpp  Node.h  frequentPatterns.py  nodeClass.py
functions/: Functions4chi.cpp  Functions4chi.h  Functions4fisher.cpp  Functions4fisher.h  Functions4u_test.cpp  Functions4u_test.h  FunctionsSuper.cpp  FunctionsSuper.h  Makefile.am  Makefile.in  PvalTable.cpp  PvalTable.h  functions4chi.py  functions4fisher.py  functions4u_test.py  functionsSuper.py  pvalTable.py
lcm53/: LCMWrap.c  LCMWrap.h  Makefile.am  Makefile.in  aheap.h  itemset.c  itemset.h  lcm.c  makefile  problem.c  problem.h  queue.c  queue.h  sgraph.c  sgraph.h  stdlib2.c  stdlib2.h  trsact.c  trsact.h  vec.c  vec.h
m4/: gtest.m4
sample/: gse6462_item.4lcmlamp.txt  sample_expression.tab  sample_expression2_less1.csv  sample_expression2_over1.csv  sample_expression_less1.csv  sample_expression_over1.csv  sample_expression_value.csv  sample_expression_value.tab  sample_expression_value_rev.csv  sample_item.4lcmlamp.txt  sample_item.csv  sample_item.csv.4lcm53  sample_item2.csv  sample_target.csv  yeast_heatshock_expression.tab  yeast_heatshock_target.csv  yeast_tfsite.4lcmlamp.txt
sample/sample_item.csv.4lcm53.results.lcm/: sample_item.csv.4lcm53.lowsup5.upsup5.closed  sample_item.csv.4lcm53.lowsup6.upsup6.closed  sample_item.csv.4lcm53.lowsup7.closed
