noinst_LIBRARIES = libfunctions.a
libfunctions_a_SOURCES = PvalTable.cpp PvalTable.h Functions4u_test.cpp Functions4u_test.h \
               Functions4fisher.cpp Functions4fisher.h Functions4chi.cpp Functions4chi.h \
               FunctionsSuper.cpp FunctionsSuper.h PvalTable.h
libfunctions_a_CPPFLAGS = $(BOOST_CPPFLAGS)

